# weather-alert-service

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  celery_app.py  celery_tasks.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  subscriptions.py
notifiers/: email.py  telegram.py
tests/: conftest.py  test_api.py  test_health.py
