[project]
name = "weather-alert"
version = "0.1.0"
description = ""
authors = [
    {name = "UZer88",email = "lisma.zotov@yandex.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn (==0.34.0)",
    "sqlalchemy (==2.0.36)",
    "asyncpg (==0.30.0)",
    "alembic (==1.14.1)",
    "redis (==5.2.0)",
    "celery (==5.4.0)",
    "python-dotenv (==1.0.1)",
    "httpx (>=0.28.1,<0.29.0)",
    "email-validator (==2.3.0)",
    "python-jose (==3.3.0)",
    "passlib (==1.7.4)",
    "python-multipart (==0.0.20)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
